core/vpc/routes.tf
resource "aws_route_table" "igw_rt" {
    vpc_id = aws_vpc.production.id

    route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
    }

    tags = {
        Name = "ig_route_table"
        VPC  = "production"
    }
}

resource "aws_route_table_association" "asstopublic" {
    count           = "${length(data.aws_availability_zones.available.names)}"
    subnet_id       = "${aws_subnet.public_subnet[count.index].id}"
    route_table_id  = aws_route_table.igw_rt.id
}
